Códigos da ME de Projeto De Progrmação

--- a/src/main/webapp/cadastrarFuncionarios.xhtml
+++ b/src/main/webapp/cadastrarFuncionarios.xhtml
@@ -22,7 +22,7 @@ and open the template in the editor.
         CPF: <h:inputText value="#{funcionarioBean.funcionario.cpf}"/> <br /><p/>
         Cargo: <h:inputText value="#{funcionarioBean.funcionario.cargo}"/> <br /><p/>
         
-        <h:commandButton value="Cadastrar" action="#{funcionarioBean.cadastrar()}"/><p/>
+        <h:commandButton value="Atualizar" action="#{funcionarioBean.cadastrar()}"/><p/>
         <h:commandButton value="voltar" action="#{funcionarioBean.voltar()}"/>
         </h:form>
         </center>
